--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,8 @@ Flask-SQLAlchemy==2.1
 
 # External libraries
 SQLAlchemy==1.0.11
-twilio==6.0.0
-phonenumbers==7.2.7
+twilio>6.0.0
+phonenumbers==8.5.1
 
 # Testing
 unittest2==1.1.0
