--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,37 @@
-# Flask
-Flask==0.10.1
-
-# Flask components for forms/database/bootstrap
-Flask-Migrate==1.7.0
-Flask-Script==2.0.5
-Flask-SQLAlchemy==2.1
-
-# External libraries
-SQLAlchemy==1.0.11
-twilio==6.9.0
-phonenumbers==8.5.1
-
-# Testing
-unittest2==1.1.0
-coverage==4.0.3
-xmlunittest==0.3.2
-lxml==3.4
-mock==2.0.0
+alembic==1.5.2
+appdirs==1.4.4
+black==20.8b1
+certifi==2020.12.5
+chardet==4.0.0
+click==7.1.2
+flake8==3.8.4
+Flask==1.1.2
+Flask-Migrate==2.6.0
+Flask-Script==2.0.6
+Flask-SQLAlchemy==2.4.4
+idna==2.10
+itsdangerous==1.1.0
+Jinja2==2.11.2
+Mako==1.1.4
+MarkupSafe==1.1.1
+mccabe==0.6.1
+mypy-extensions==0.4.3
+pathspec==0.8.1
+phonenumbers==8.12.16
+pycodestyle==2.6.0
+pyflakes==2.2.0
+PyJWT==1.7.1
+python-dateutil==2.8.1
+python-dotenv==0.15.0
+python-editor==1.0.4
+pytz==2020.5
+regex==2020.11.13
+requests==2.25.1
+six==1.15.0
+SQLAlchemy==1.3.22
+toml==0.10.2
+twilio==6.51.0
+typed-ast==1.4.2
+typing-extensions==3.7.4.3
+urllib3==1.26.2
+Werkzeug==1.0.1
